@@ -1,23 +1,24 @@
 package org.example;
+
 import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 
 public class Run {
     private static void printLines(String cmd, InputStream ins) throws Exception {
-        String line = null;
+        String line;
         BufferedReader in = new BufferedReader(
                 new InputStreamReader(ins));
         while ((line = in.readLine()) != null) {
-            System.out.println(cmd + " " + line);
+
         }
     }
 
     public static void runProcess(String command) throws Exception {
-        Process pro = Runtime.getRuntime().exec(command);
+        ProcessBuilder builder = new ProcessBuilder(command.split(" "));
+        Process pro = builder.start();
         printLines(command + " stdout:", pro.getInputStream());
         printLines(command + " stderr:", pro.getErrorStream());
         pro.waitFor();
-        System.out.println(command + " exitValue() " + pro.exitValue());
     }
 }
